# stillrunning-pre-commit

./: .gitignore  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml  stillrunning_check.py
stillrunning_pre_commit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
