[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stillrunning-pre-commit"
version = "1.0.0"
description = "Pre-commit hook for scanning dependencies against supply chain attacks"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "stillrunning.io", email = "hello@stillrunning.io"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
keywords = ["security", "supply-chain", "pre-commit", "pip", "npm", "malware"]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://stillrunning.io"
Documentation = "https://stillrunning.io/docs"
Repository = "https://github.com/johhnyg/stillrunning-pre-commit"
Issues = "https://github.com/johhnyg/stillrunning-pre-commit/issues"

[project.scripts]
stillrunning-check = "stillrunning_check:main"

[tool.setuptools]
py-modules = ["stillrunning_check"]
